Issue #1855: styled the markup to make the info block panes visible

--- a/themes/devtrac_classic/css/newstyles.css
+++ b/themes/devtrac_classic/css/newstyles.css
@@ -149,7 +149,7 @@ table tbody tr.even td.active {
 
 .zone-featured .nice-menu {
   float: right;
-  margin-right: 20px;
+  margin-right: 50px;
 }
 
 .zone-featured .nice-menu ,
@@ -277,6 +277,49 @@ table tbody tr.even td.active {
 .zone-featured .block-current-search h3 {
   margin: 0;
   font-size: 1em;
+}
+
+
+.zone-featured .block-pane {
+  position: absolute;
+  right: 20px;
+  top: 0;
+  width: 31px;
+  height: 27px;
+
+}
+
+.zone-featured .block-pane .block-inner {
+  position: relative;
+  width: 31px;
+  height: 27px;
+  float: right;
+  z-index: 3;
+}
+
+.zone-featured .block-pane .block-title.collapsiblock.collapsiblockCollapsed {
+  background-color: #333333;
+}
+
+.zone-featured .block-pane .block-title.collapsiblock {
+  width: 31px;
+  height: 27px;
+  background-color: #111111;
+  background-image: url(../images/user-menu-icon-info.png);
+  background-repeat: no-repeat;
+  background-size: auto 17px;
+  background-position: 50% 50%;
+}
+
+.zone-featured .block-pane .content {
+  position: absolute;
+  top: 27px;
+  right: 0;
+  max-height: 200px;
+  width: 300px;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.8);
+  border-top: thin solid #555555;
 }
 
 /*=============================================================================
